[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dns-bl-check"
description = 'Check a host against multiple DNS blocklist providers.'
readme = "README.md"
requires-python = ">=3.8"
license = "ISC"
keywords = []
authors = [
  { name = "Darren Spruell", email = "phatbuckett@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/dspruell/dns-bl-check#readme"
Issues = "https://github.com/dspruell/dns-bl-check/issues"
Source = "https://github.com/dspruell/dns-bl-check"
